tests/ui/issues/issue-11681.stderr
error[E0515]: cannot return value referencing temporary value
  --> $DIR/issue-11681.rs:13:12
   |
LL |     let test_value = &Test;
   |                       ---- temporary value created here
LL |     return test_value;
   |            ^^^^^^^^^^ returns a value referencing data owned by the current function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
